# Cats-vs-Dogs-Classification

./: README.md  pyproject.toml  requirements.txt
src/cats_vs_dogs/: __init__.py  config.py  data.py  evaluate.py  model.py  predict.py  train.py
tests/: __init__.py  test_config.py  test_model.py
